--- a/views/home.view.html
+++ b/views/home.view.html
@@ -6,82 +6,83 @@
   </div>
 <!-- Tabs================================================== -->
 <div class="tabbable">
-<ul class="nav nav-tabs nav-pills" id="myTab">
-  <li class="active"><a href="#home" data-toggle="tab">Home</a></li>
-  <li><a href="#profile" data-toggle="tab">Profile</a></li>
-  <li><a href="#resume" data-toggle="tab">Resume</a></li>
-  <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" >More <b class="caret"></b></a>
-    	  <ul class="dropdown-menu" role="menu">
-      	  <li><a href="#skills" data-toggle="tab">My skills</a></li>
-      	  <li><a href="#hobbies" data-toggle="tab">My hobbies</a></li>
-      	  <li><a href="#wish" data-toggle="tab">My wish list</a></li>
-      	  <li class="divider"></li>
-       	  <li><a href="#blogs" data-toggle="tab">Recommended Blogs</a></li>
-    	  </ul>
-  	</li>
-</ul>
+  <ul class="nav nav-tabs nav-pills" id="myTab">
+    <li class="active"><a href="#home" data-toggle="tab">Home</a></li>
+    <li><a href="#profile" data-toggle="tab">Profile</a></li>
+    <li><a href="#resume" data-toggle="tab">Resume</a></li>
+    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" >More <b class="caret"></b></a>
+      	  <ul class="dropdown-menu" role="menu">
+        	  <li><a href="#skills" data-toggle="tab">My skills</a></li>
+        	  <li><a href="#hobbies" data-toggle="tab">My hobbies</a></li>
+        	  <li><a href="#wish" data-toggle="tab">My wish list</a></li>
+        	  <li class="divider"></li>
+         	  <li><a href="#blogs" data-toggle="tab">Recommended Blogs</a></li>
+      	  </ul>
+    	</li>
+  </ul>
 <div class="tab-content">
   <div class="tab-pane fade in active" id="home">
 <!-- Carousel================================================== -->
 
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-	<ol class="carousel-indicators">
-	  <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-	  <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-	  <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-	  <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-	  <li data-target="#carousel-example-generic" data-slide-to="4"></li>
-	</ol>
-	<div class="carousel-inner" role="listbox">
-	  <div class="carousel-item active">
-	    <img src="assets/img/betting_soft.png" alt="First slide">
-	    <div class="carousel-caption">
-	      <h4>Sports Betting System</h4>
-	      <p>Designed and developed the back end of a sports betting system, integrated a database using JDBC and SQL, tested the system by JUnit , redacted software engineering documents along the development process</p>
-	    </div>
-	  </div>
-	  <div class="item">
-	    <img src="assets/img/c2w.png"  alt="Second slide">
-	    <div class="carousel-caption">
-	      <h4>Chat While Watching</h4>
-	      <p>Redacted an application-layer protocol specification, implemented the protocol with a simple but reliable chat room application using Python and Python Twisted framework</p>
-	    </div>
-	  </div>
-	  <div class="item">
-	    <img src="assets/img/airport_data_visualization.png"  alt="Third slide">
-	    <div class="carousel-caption">
-	      <h4>Airport Data Visualization</h4>
-	      <p>Designed and developed a Java Applet that visualized <a target="_blank" href="https://lists.openstreetmap.org/pipermail/talk-fr/2015-August/077812.html">Airport and Route data</a> on an interactive map using Java Processing library and Unfolding Map library</p>
-	    </div>
-	  </div>
-	  <div class="item">
-	    <img src="assets/img/TextEditor.png"  alt="Fourth slide">
-	    <div class="carousel-caption">
-	      <h4>Smart Text Editor</h4>
-	      <p>Developed the back-end of a smart text editor that incorporates “intelligent” behaviors of modern-day text interfaces including autocomplete, flagging misspelled words and spelling auto-correct, used Test-driven development by JUnit</p>
-	    </div>
-	  </div>
-	  <div class="item">
-	    <img src="assets/img/3d_recognition.png"  alt="Fifth slide">
-	    <div class="carousel-caption">
-	      <h4>3D object recognition</h4>
-	      <p>Contributed to an existing project which used Deep Learning for 3D object classification, modified the code in Matlab to classify customized 3D images captured by a Kinect camera, a detailed description can be found <a href = "assets/docs/Extrait_RECH201-proceedings_2015_automneV5.pdf" target="_blank">here</a></p>
-	    </div>
-	  </div>
-	</div>
-	<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-		<span class="icon-prev" aria-hidden="true"></span>
-		<span class="sr-only">Previous</span>
-	</a>
-	<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-		<span class="icon-next" aria-hidden="true"></span>
-		<span class="sr-only">Next</span>
-	</a>
-</div>            
-<!-- Carousel================================================== -->
+  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+    </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="assets/img/betting_soft.png" alt="First slide">
+      <div class="carousel-caption">
+        <h4>Sports Betting System</h4>
+        <p>Designed and developed the back end of a sports betting system, integrated a database using JDBC and SQL, tested the system by JUnit , redacted software engineering documents along the development process</p>
+      </div>
+    </div>
+    <div class="item">
+      <img src="assets/img/c2w.png"  alt="Second slide">
+      <div class="carousel-caption">
+        <h4>Chat While Watching</h4>
+        <p>Redacted an application-layer protocol specification, implemented the protocol with a simple but reliable chat room application using Python and Python Twisted framework</p>
+      </div>
+    </div>
+    <div class="item">
+      <img src="assets/img/airport_data_visualization.png"  alt="Third slide">
+      <div class="carousel-caption">
+        <h4>Airport Data Visualization</h4>
+        <p>Designed and developed a Java Applet that visualized <a target="_blank" href="https://lists.openstreetmap.org/pipermail/talk-fr/2015-August/077812.html">Airport and Route data</a> on an interactive map using Java Processing library and Unfolding Map library</p>
+      </div>
+    </div>
+    <div class="item">
+      <img src="assets/img/TextEditor.png"  alt="Fourth slide">
+      <div class="carousel-caption">
+        <h4>Smart Text Editor</h4>
+        <p>Developed the back-end of a smart text editor that incorporates “intelligent” behaviors of modern-day text interfaces including autocomplete, flagging misspelled words and spelling auto-correct, used Test-driven development by JUnit</p>
+      </div>
+    </div>
+    <div class="item">
+      <img src="assets/img/3d_recognition.png"  alt="Fifth slide">
+      <div class="carousel-caption">
+        <h4>3D object recognition</h4>
+        <p>Contributed to an existing project which used Deep Learning for 3D object classification, modified the code in Matlab to classify customized 3D images captured by a Kinect camera, a detailed description can be found <a href = "assets/docs/Extrait_RECH201-proceedings_2015_automneV5.pdf" target="_blank">here</a></p>
+      </div>
+    </div>
   </div>
-  <div class="tab-pane fade in" id="profile">
+    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    	<span class="icon-prev" aria-hidden="true"></span>
+    	<span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    	<span class="icon-next" aria-hidden="true"></span>
+    	<span class="sr-only">Next</span>
+    </a>
+  </div>            
+<!-- Carousel================================================== -->
+
+  </div>
   <!-- Profile================================================== -->
+  <div class="tab-pane fade in" id="profile">
     <p>
     My name is Jinhai and I am currently a second year student at <a title="" href="https://en.wikipedia.org/wiki/%C3%89cole_nationale_sup%C3%A9rieure_des_t%C3%A9l%C3%A9communications_de_Bretagne" data-original-title="Telecom Bretagne (formerly known as ENST Bretagne) is one of the top French grande école and a high standard research centre providing high level training in Information Technologies and telecommunications. This grande école of engineering is located near Brest in Brittany." data-toggle="tooltip"> Telecom Bretagne</a> in France, majoring in Computer Science and Networks. I am interested in being a software engineer in future because I want to achieve something unusual that can improve our daily lives. To make my dream come true, I will begin with taking <a title="" href="http://stage.ooreka.fr/comprendre/annee-cesure"data-original-title="At French grande école, a year of caesura (Année césure) is a gap year between second year and third year, for the aim of doing some practical projects within the industrial world before graduation" data-toggle="tooltip">a year of caesura</a> in technology industry and making my first contribution to the development of industrial world as well as strengthen my skills of solving problems and skills of programing.
 </p>
@@ -105,8 +106,8 @@
 </div>
 <!-- Profile More================================================== -->
 <!-- Profile================================================== -->
-<!-- Resume================================================== -->
   </div>
+  <!-- Resume================================================== -->
   <div class="tab-pane fade in" id="resume">
     <H3>Resume</H3>
     <p>For my resume, please go to:</p>
