add css to website

--- a/views/footer.view.html
+++ b/views/footer.view.html
@@ -1,6 +1,7 @@
 <!-- myWeb footer -->
-<div class="container">
-	<footer class="footer">
-	<p>&copy; 2016 ZHOU Jinhai, with help from <a href="https://github.com/zhangshuwei">Shuwei &raquo;</a></p>
-	</footer>
-</div>
+
+<footer class="footer">
+    <div class="container">
+        <p class="text-muted">&copy; 2016 ZHOU Jinhai, with kindly help from <a href="https://github.com/zhangshuwei">Shuwei &raquo;</a></p>
+    </div>
+</footer>
