--- a/views/home.view.html
+++ b/views/home.view.html
@@ -1,6 +1,6 @@
 <!--Hero Unit-->
 <div class="container">
-  <div id="background"class="hero-unit">
+  <div id="background" class="jumbotron">
     <h1>Jinhai Zhou</h1>
     <h3>A passionate and creative software engineer</h3>
   </div>
@@ -88,7 +88,7 @@
 </p>
 <!-- Profile More================================================== -->
 <p class="center">
-  <a class="btn" data-toggle="collapse" data-target="#toggle-demo">Click here to view more</a>
+  <a class="btn btn-primary" data-toggle="collapse" data-target="#toggle-demo">Click here to view more</a>
 </p>
 <div id="toggle-demo" class="collapse">
   <div class="hero-unit">
@@ -121,127 +121,127 @@
     <h4>Programming Languages</h4>
 
     <div class="row-fluid">
-    <div class="span6">
+    <div class="col-md-6">
         <p>C</p>
-        <div class="progress progress-striped"><div class="bar" style="width: 50%;"></div></div>
+        <div class="progress"><div class="progress-bar progress-bar-striped active" style="width: 50%;"></div></div>
     </div>
-    <div class="span6">
+    <div class="col-md-6">
         <p>C++</p>
-        <div class="progress progress-striped"><div class="bar" style="width: 40%;"></div></div>
+        <div class="progress"><div class="progress-bar progress-bar-striped active" style="width: 40%;"></div></div>
     </div>
     </div>
 
     <div class="row-fluid">
-    <div class="span6">
+    <div class="col-md-6">
         <p>C#</p>
-        <div class="progress progress-striped"><div class="bar" style="width: 40%;"></div></div>
+        <div class="progress"><div class="progress-bar progress-bar-striped active" style="width: 40%;"></div></div>
     </div>
-    <div class="span6">
+    <div class="col-md-6">
         <p>Java</p>
-        <div class="progress progress-striped active"><div class="bar" style="width: 90%;"></div></div>
+        <div class="progress"><div class="progress-bar progress-bar-striped active" style="width: 90%;"></div></div>
     </div>
     </div>
 
     <div class="row-fluid">
-    <div class="span6">
+    <div class="col-md-6">
         <p>Python</p>
-        <div class="progress progress-striped active"><div class="bar" style="width: 60%;"></div></div>
+        <div class="progress"><div class="progress-bar progress-bar-striped active" style="width: 60%;"></div></div>
     </div>
-    <div class="span6">
+    <div class="col-md-6">
         <p>Matlab</p>
-        <div class="progress progress-striped active"><div class="bar" style="width: 80%;"></div></div>
+        <div class="progress"><div class="progress-bar progress-bar-striped active" style="width: 80%;"></div></div>
     </div>
     </div>
 
     <div class="row-fluid">
-    <div class="span6">
+    <div class="col-md-6">
         <p>HTML</p>
-        <div class="progress progress-striped active"><div class="bar" style="width: 30%;"></div></div>
+        <div class="progress"><div class="progress-bar progress-bar-striped active" style="width: 30%;"></div></div>
     </div>
-    <div class="span6">
+    <div class="col-md-6">
         <p>PHP</p>
-        <div class="progress progress-striped active"><div class="bar" style="width: 20%;"></div></div>
+        <div class="progress"><div class="progress-bar progress-bar-striped active" style="width: 20%;"></div></div>
     </div>
     </div>
 
     <div class="row-fluid">
-    <div class="span6">
+    <div class="col-md-6">
         <p>Markdown</p>
-        <div class="progress progress-striped active"><div class="bar" style="width: 60%;"></div></div>
+        <div class="progress"><div class="progress-bar progress-bar-striped active" style="width: 60%;"></div></div>
     </div>
-    <div class="span6">
+    <div class="col-md-6">
         <p>Latex</p>
-        <div class="progress progress-striped"><div class="bar" style="width: 30%;"></div></div>
+        <div class="progress"><div class="progress-bar progress-bar-striped active" style="width: 30%;"></div></div>
     </div>
     </div>
 
     <h4>Systems &amp; Software</h4>
 
     <div class="row-fluid">
-    <div class="span6">
+    <div class="col-md-6">
         <p>Linux Ubuntu</p>
-        <div class="progress progress-striped active"><div class="bar bar-success" style="width: 60%;"></div></div>
+        <div class="progress"><div class="progress-bar progress-bar-success progress-bar-striped active" style="width: 60%;"></div></div>
     </div>
-    <div class="span6">
+    <div class="col-md-6">
         <p>VirtualBox</p>
-        <div class="progress progress-striped active"><div class="bar bar-success" style="width: 50%;"></div></div>
+        <div class="progress"><div class="progress-bar progress-bar-success progress-bar-striped active" style="width: 50%;"></div></div>
     </div>
     </div>
 
     <div class="row-fluid">
-    <div class="span6">
+    <div class="col-md-6">
         <p>Git/SVN</p>
-        <div class="progress progress-striped active"><div class="bar bar-success" style="width: 90%;"></div></div>
+        <div class="progress"><div class="progress-bar progress-bar-success progress-bar-striped active" style="width: 90%;"></div></div>
     </div>
-    <div class="span6">
+    <div class="col-md-6">
         <p>Eclipse</p>
-        <div class="progress progress-striped active"><div class="bar bar-success" style="width: 70%;"></div></div>
+        <div class="progress"><div class="progress-bar progress-bar-success progress-bar-striped active" style="width: 70%;"></div></div>
     </div>
     </div>
 
     <div class="row-fluid">
-    <div class="span6">
+    <div class="col-md-6">
         <p>HDFS</p>
-        <div class="progress progress-striped active"><div class="bar bar-success" style="width: 40%;"></div></div>
+        <div class="progress"><div class="progress-bar progress-bar-success progress-bar-striped active" style="width: 40%;"></div></div>
     </div>
-    <div class="span6">
+    <div class="col-md-6">
         <p>Hadoop (Pig, Hive, HBase)</p>
-        <div class="progress progress-striped active"><div class="bar bar-success" style="width: 30%;"></div></div>
+        <div class="progress"><div class="progress-bar progress-bar-success progress-bar-striped active" style="width: 30%;"></div></div>
     </div>
     </div>
 
     <div class="row-fluid">
-    <div class="span6">
+    <div class="col-md-6">
         <p>Docker</p>
-        <div class="progress progress-striped active"><div class="bar bar-success" style="width: 30%;"></div></div>
+        <div class="progress"><div class="progress-bar progress-bar-success progress-bar-striped active" style="width: 30%;"></div></div>
     </div>
-    <div class="span6">
+    <div class="col-md-6">
         <p>Unity</p>
-        <div class="progress progress-striped active"><div class="bar bar-success" style="width: 40%;"></div></div>
+        <div class="progress"><div class="progress-bar progress-bar-success progress-bar-striped active" style="width: 40%;"></div></div>
     </div>
     </div>
 
     <h4>Languages</h4>
 
     <div class="row-fluid">
-    <div class="span6">
+    <div class="col-md-6">
         <p>Chinese</p>
-        <div class="progress progress-striped active"><div class="bar bar-warning" style="width: 95%;"></div></div>
+        <div class="progress"><div class="progress-bar progress-bar-warning progress-bar-striped active" style="width: 95%;"></div></div>
     </div>
-    <div class="span6">
+    <div class="col-md-6">
         <p>English</p>
-        <div class="progress progress-striped active"><div class="bar bar-warning" style="width: 80%;"></div></div>
+        <div class="progress"><div class="progress-bar progress-bar-warning progress-bar-striped active" style="width: 80%;"></div></div>
     </div>
     </div>
 
     <div class="row-fluid">
-    <div class="span6">
+    <div class="col-md-6">
         <p>French</p>
-        <div class="progress progress-striped active"><div class="bar bar-warning" style="width: 75%;"></div></div>
+        <div class="progress"><div class="progress-bar progress-bar-warning progress-bar-striped active" style="width: 75%;"></div></div>
     </div>
-    <div class="span6">
+    <div class="col-md-6">
         <p>Janpanese</p>
-        <div class="progress progress-striped active"><div class="bar bar-warning" style="width: 20%;"></div></div>
+        <div class="progress"><div class="progress-bar progress-bar-warning progress-bar-striped active" style="width: 20%;"></div></div>
     </div>
     </div>
 
@@ -254,22 +254,22 @@
     <h3 class="center">My Hobbies</h3>
 
     <div class="row-fluid">
-    <div class="span6">
+    <div class="col-md-6">
       <h4>Skiing</h4>
       <p>Vitesse Max Achieved 71.64 km/h; Altitude Maxi Reached 2462.0 m</p>
     </div>
-    <div class="span6">
+    <div class="col-md-6">
        <h4>Skating</h4>
       <p>Practice from the age of 8, still enjoying inline skating</p>   
     </div>
     </div>
 
     <div class="row-fluid">
-    <div class="span6">
+    <div class="col-md-6">
       <h4>Jogging</h4>
       <p>At least 10 km a week, aim to achieve a marathon</p>
     </div>
-    <div class="span6">
+    <div class="col-md-6">
        <h4>Photography</h4>
       <p>Ever possessed a Canon EOS 60D, now a GoPro and being a GoProer</p>   
     </div>
@@ -283,12 +283,12 @@
     <h3 class="center">My wish list</h3>
 
     <div class="row-fluid">
-    <div class="span6">
-      <h4>The Half-Marathon Runner <span class="badge badge-important">not achieved</span></h4>
+    <div class="col-md-6">
+      <h4>The Half-Marathon Runner <span class="label label-pill label-default">not achieved</span></h4>
       <p>Achieve a half-marathon</p>
     </div>
-    <div class="span6">
-       <h4>The Blog Writer <span class="badge badge-success">achieved</span></h4>
+    <div class="col-md-6">
+       <h4>The Blog Writer <span class="label label-pill label-success">achieved</span></h4>
       <p>Open a blogger and write technical posts weekly</p>   
     </div>
     </div>
@@ -301,22 +301,22 @@
 
 
     <div class="row-fluid">
-    <div class="span6">
+    <div class="col-md-6">
       <h4><a title="" href="http://www.sunbotu.com/">Botu Sun</a></h4>
       <p>Graduated from Telecom Bretagne in 2015, now works as Customer Solutions Engineer at Google</p>
     </div>
-    <div class="span6">
+    <div class="col-md-6">
        <h4><a title="" href="http://www.kai-li.co.nf/">Kai Li</a></h4>
       <p>Graduated from Telecom Bretagne in 2015, now works as Junior Software Engineer at Amadeus IT Group</p>   
     </div>
     </div>
 
     <div class="row-fluid">
-    <div class="span6">
+    <div class="col-md-6">
       <h4><a title="" href="http://shidafu1992.blogspot.fr/">Dafu SHI</a></h4>
       <p>Enrolled in Telecom Bretagne in 2013, now in a year of caesura and works as Cloud Applications Software Engineer at Gemalto</p>
     </div>
-    <div class="span6">
+    <div class="col-md-6">
        <h4><a title="" href="http://cuijiwen.com/#/">Jiwen CUI</a></h4>
       <p>Enrolled in Telecom Bretagne in 2014, now in 2nd year of Msc</p>   
     </div>
