--- a/views/home.view.html
+++ b/views/home.view.html
@@ -1,6 +1,6 @@
 <!--Hero Unit-->
 <div class="container">
-  <div id="background" class="jumbotron">
+  <div id="background" class="jumbotron white">
     <h1>Jinhai Zhou</h1>
     <h3>A passionate and creative software engineer</h3>
   </div>
