--- a/views/navbar/home.navbar.view.html
+++ b/views/navbar/home.navbar.view.html
@@ -13,8 +13,8 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#/">Home</a></li>
-        <li><a href="http://jinhaizhou.blogspot.fr/">Github</a></li>
-        <li><a href="https://github.com/JinhaiZ/">Blogger</a></li>
+        <li><a href="http://jinhaizhou.blogspot.fr/">Blogger</a></li>
+        <li><a href="https://github.com/JinhaiZ/">Github</a></li>
 		<li><a href="#/contact">Contact</a></li>
       </ul>
     </div><!--/.nav-collapse -->
