change contact info

--- a/views/contact.view.html
+++ b/views/contact.view.html
@@ -2,12 +2,12 @@
     <h1>Contact</h1>
     <p>For any more information, please contact me by:</p>
     <p>Email:<br>
-        <a href="mailto:zhoujinhaixd@gmail.com">zhoujinhaixd@gmail.com</a><br>
-        <a href="mailto:jinhai.zhou@telecom-bretagne.eu">jinhai.zhou@telecom-bretagne.eu</a></p>
+        zhoujinhaixd at gmail.com<br>
+        jinhai.zhou at telecom-bretagne.eu</p>
     <p>LinkedIn:<br>
         <a href="https://fr.linkedin.com/in/jinhaizhou">https://fr.linkedin.com/in/jinhaizhou</a></p>
     <p>QQ:<br>
-    413512626</p>
+        413512626</p>
     <h2>Leave a message</h2>
     <div id="disqus_thread"></div>
     <script>
